Fix overflow when editing bug.

--- a/app/assets/stylesheets/pages/repo.scss
+++ b/app/assets/stylesheets/pages/repo.scss
@@ -75,6 +75,9 @@
     }
 
     &.edit-mode {
+      .blob-viewer-container {
+        overflow: hidden;
+      }
       .monaco-editor.vs {
         .cursor {
           background: $black;
